# aidweather

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  multi.parquet  pyproject.toml  sites.csv  testdata.csv  testdata.json
.agents/: AGENTS.md
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
aidweather/: README.md  __init__.py  config.json  config.py  core.py  dataviz.py  power_api.py
aidweather/tests/: fetch_from_api.py  params_availability.ipynb  visualization.ipynb
demo/: aidweather-demo.ipynb  aidweather-demo.py  all-tests.ipynb
docs/: ASSETS.md  NASA_POWER_Licence_Usage.md  TEST_COVERAGE.md  __init__.md  aidweather_nasa_power_usage.md  aidweather_workflow_guide.md  api_inventory.md  api_reference.md  client.md  config.md  config_reference.md  contributing.md  data_reliability_guide.md  data_source_comparison.md  developer_guide.md  geo.md  geo_reference.md  parameter_provenance.md  release_checklist.md  spatial_interpretation.md  technical_debt.md  test_coverage_gaps.md  user_guide.md  utils.md  utils_reference.md
docs/.obsidian/: workspace.json
examples/brazil/: brazil_capitals_climate_risk.ipynb  brazil_capitals_climate_risk.md  brazil_capitals_climate_risk.py  brazil_capitals_climate_risk_plots.ipynb  brazil_capitals_climate_risk_plots.py  test_brazil_capitals_example.py
examples/brazil/data/: brazil_state_capitals.csv
examples/external_validation/docs/: installation-tests-linux-docker.md  installation-tests-windows-vm-gnome-boxes.md.save
examples/external_validation/notebooks/: external_validation.ipynb  external_validation_all.ipynb  external_validation_cities.ipynb
examples/external_validation/scripts/: external_validation.py  external_validation_all.py  external_validation_cities.py  install_validation_deps.sh
notebooks/: aidweather-demo.ipynb  aidweather-demo.py  aidweather_masterclass.ipynb  aidweather_masterclass.py
outputs/brazil_capitals/: annual_metrics.parquet  risk_scores.csv  trends.csv
scripts/: beta_gate.sh
src/aidweather/: __init__.py  cli.py  client.py  config.py  geo.py  utils.py
src/aidweather.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aidweather/assets/: __init__.py  config.json  model_config.json
test/: results.csv
tests/: conftest.py  test.py  test_cli.py  test_client.py  test_client_additional.py  test_client_advanced.py  test_client_caching.py  test_client_validation.py  test_config.py  test_config_extra.py  test_env_loading.py  test_env_vars.py  test_geo.py  test_geo_extra.py  test_live.py  test_utils.py  test_utils_extra.py  test_wheel_smoke.py
