# packages/aidweather-base/pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidweather"
version = "0.1.0"
description = "Weather data retrieval and validation for agricultural applications."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Cleverson Matiolli, PhD", email = "clever.dspy@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyarrow>=15.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
# Reserved ecosystem extension points — install these when the packages exist:
#   pip install aidweather[aidviz]    → custom weather visualizations
#   pip install aidweather[aidfarm]   → EDA, feature engineering, ML
#   pip install aidweather[all]       → complete toolkit
aidviz  = []
aidfarm = []
all     = ["aidweather[aidviz,aidfarm]"]

test = [
    "pytest>=8.0.0",
    "requests-mock>=1.11.0",
]

[project.scripts]
aidweather = "aidweather.cli:app"

[project.urls]
Homepage   = "https://github.com/matiollipt/agrilyzer"
Repository = "https://github.com/matiollipt/agrilyzer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aidweather.assets" = ["*.json", "*.mplstyle"]
