# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidweather"
version = "0.1.2"
description = "Weather data retrieval and validation for agricultural applications."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Cleverson Matiolli, PhD", email = "clever.dspy@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0,<3",
    "urllib3>=2.0.0,<3",
    "pandas>=2.0.0,<4",
    "numpy>=1.24.0,<3",
    "pydantic>=2.0.0,<3",
    "rich>=13.0.0,<15",
    "typer>=0.12.0,<1",
    "pyarrow>=15.0.0,<25",
    "platformdirs>=3.0.0,<5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "requests-mock>=1.11.0",
    "types-requests>=2.31.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
aidweather = "aidweather.cli:app"

[project.urls]
Homepage   = "https://github.com/matiollipt/aidweather"
Repository = "https://github.com/matiollipt/aidweather"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aidweather.assets" = ["*.json", "*.mplstyle"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples/brazil"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["notebooks/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
packages = ["aidweather"]
ignore_missing_imports = true
warn_unused_configs = true
